# BUPT_jwcheckcode_Generator

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  deploy.sh  entrypoint.sh  jw-dioxus.service  jw_code.db-shm  jw_code.db-wal  lessons_data.db  run.sh  scan_logs copy.txt  scan_logs.txt  txt
.cargo/: config.toml
assets/: main.css  qr-scanner.js
migrations/: 001_create_classes_table.sql
src/: database.rs  js_bindings.rs  main.rs  models.rs  qr_parser.rs  server.rs  time_utils.rs
src/components/: code.rs  home.rs  mod.rs  nav.rs  pagenotfound.rs
src/handlers/: api.rs  mod.rs  pages.rs
src/utils/: api.rs  db.rs  mod.rs  signing_code.rs  time.rs
static/: generate.html  generate.js  index.html  scan.html  scan.js  script.js  selector.html  selector.js  style.css
