[package]
name = "jw_code"
version = "0.5.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
regex = "1.11.1"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
urlencoding = "2.1.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4"] }
