[package]
name = "jw_code"
version = "0.1.0"
authors = ["MagmaDimsum-RTX <madmaliu@bupt.edu.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlVideoElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "Navigator",
  "Window",
  "VideoTrack",
  "MediaStreamTrack",
  "ImageData",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
rusqlite = { version = "0.36.0", optional = true }
tokio = { version = "1", optional = true }
axum = { version = "0.8.4", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite", "dep:tokio", "dep:axum"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
